[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["lcgaravito <lc.garavito@uniandes.edu.co>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/lcgaravito/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
